<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> yDo </string>
    <string name="action_settings"> Settings </string>
    <string name="action_about"> About us </string>
    <string name="action_logout"> Log out </string>

    
    <!-- Main Page -->
    <string name="email_main"> Enter your yDo email </string>
    <string name="password_main"> Enter your yDo password </string>
    <string name="autoLogin_main"> Auto login? </string>
    <string name="login_main"> Start yDo </string>
    <string name="singUp_main"> Create yDo account </string>
    <string name="noAccount_main"> Start yDo without account </string>
    <string name="passReset_main"> Forgot password? </string>

    
    <!-- Sign Up Page -->
    <string name="title_signUp">Sign Up</string>
    <string name="firstName_signUp">Enter your first name</string>
    <string name="lastName_signUp">Enter your last name</string>
    <string name="enterEmail_signUp">Enter your email</string>
    <string name="enterPassword_1_signUp">Enter your password</string>
    <string name="enterPassword_2_signUp">Enter password again</string>
    <string name="submit_signUp">Submit yDo account</string>


    <!-- Password Reset Page -->
    <string name="title_passReset">Password Reset</string>
    <string name="firstName_resetPass">Enter your first name*</string>
    <string name="lastName_resetPass">Enter your last name*</string>
    <string name="enterEmail_resetPass">Enter your yDo email*</string>
    <string name="submit_resetPass">Reset yDo password</string>

</resources>
