<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D8D5C7"
    tools:context=".MainActivity" >

   	<!-- User email input field -->
    <EditText 
        android:id="@+id/email_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email_main"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_main"
        android:inputType="textEmailAddress" >
		<requestFocus/>
    </EditText>
    
 	<!-- User password input field -->
    <EditText
        android:id="@+id/password_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_main"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_main"
        android:inputType="textPassword" />
    
    <!-- Auto login checkbox -->
    <CheckBox
        android:id="@+id/autoLogin_main"
        android:onClick="autoLoginClicked"
        android:textSize="12sp"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_main"
        android:layout_below="@+id/password_main"
        android:layout_marginTop="10dp"
        android:text="@string/autoLogin_main" />
    
    <!-- Login button -->
    <Button
        android:id="@+id/login_main"
        android:onClick="loginClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoLogin_main"
        android:layout_marginTop="10dp"
        android:text="@string/login_main" />

	<!-- Sign up button -->
    <Button
        android:id="@+id/singUp_main"
        android:onClick="signUpClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_main"
        android:layout_marginTop="30dp"
        android:text="@string/singUp_main" />

	<!-- Start yDo without account button -->
	<Button
        android:id="@+id/noAccount_main"
        android:onClick="noAccountClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/singUp_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/noAccount_main" />
	
	<!-- Password forgot reset button -->

    <Button
        android:id="@+id/passReset_main"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="passResetClicked"
        android:text="@string/passReset_main" />

</RelativeLayout>